k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kraftivibe
  labels:
    name: kraftivibe
    app.kubernetes.io/name: kraftivibe
    app.kubernetes.io/part-of: kraftivibe
